# htcondor-jobs

./: .coveragerc  .dockerignore  .travis.yml  NOTICE  README.md  codecov.yml  dr  flow.py  mypy.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docker/: Dockerfile  condor_config.local
docs/source/: api.rst  conf.py  faq.rst  index.rst
docs/source/versions/: v0_1_0.rst
htcondor/jobs/: __init__.py  descriptions.py  handles.py  locate.py  personal.py  status.py  submit.py  types.py  version.py
htcondor_jobs/: __init__.py  clusters.py  constraints.py  descriptions.py  exceptions.py  flow.py  handles.py  locate.py  personal.py  scheduler.py  status.py  submit.py  types.py  utils.py  version.py
tests/: ci.sh  conftest.py  travis.sh
tests/_inf/: Dockerfile  condor_config.local
tests/integration/: test_workflows.py
tests/integration/test_cluster_handles/: test_json.py  test_pickling.py  test_state.py  test_wait.py
tests/integration/test_handles/: test_actions.py  test_combining_handles.py  test_edit.py  test_state.py  test_state_shortcuts.py  test_wait.py
tests/unit/: constraints.py  test_boolean.py  test_constraint_reduction.py  test_constraints.py
tests/unit/constraints/: test_comparison_constraint.py  test_constraint_reduction.py  test_multiconstraints.py  test_not.py  test_true_and_false.py
tests/unit/handles/: test_constraint_handle.py
tests/unit/locate/: test_get_schedd.py  test_timed_cache.py
tests/unit/submit/: test_descriptions.py  test_itemdata.py
